--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <p>Sob a proteção de Nossa Senhora do Carmo, caminhamos na fé.</p>
     </section>
 
+    <div id="container-aviso" class="aviso-destaque" style="display: none;">
+        <span id="texto-aviso">Carregando avisos...</span>
+    </div>
+
     <section class="celebracoes" id="missas">
         <h2>Horários de Celebrações</h2>
         <div class="grid-horarios">
