--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Administrativo - PNS do Carmo</title>
+    <title>Login Administrativo | PNSC</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/login.css">
 </head>
@@ -17,7 +17,7 @@
 
         <form id="login-form">
             <div class="form-group">
-                <label for="email">E-mail Institucional</label>
+                <label for="email">E-mail</label>
                 <input type="email" id="email" placeholder="secretaria@pnsdocarmo.com.br" required>
             </div>
 
@@ -32,7 +32,7 @@
         <a href="#" class="forgot-password">Esqueceu a senha? Entre em contato com o suporte técnico.</a>
     </div>
 
-    <script src="JS/login.js"></script>
+    <script type="module" src="JS/login.js"></script>
 
 </body>
 </html>
