Correção de erros e página PIX

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="pix-section" id="dizimo">
         <h2>Seja um <span id="doador">Doador</span></h2>
         <p>Contribua com a evangelização e manutenção de nossa paróquia.</p>
-        <a href="#" class="btn-pix">Contribuir via PIX</a>
+        <a href="pix.html" class="btn-pix">Contribuir via PIX</a>
     </section>
 
     <section class="endereco" id="endereco">
@@ -77,6 +77,8 @@
     <footer id="direitos">
         <p>&copy; 2026 Paróquia Nossa Senhora do Carmo - Todos os direitos reservados.</p>
         <p>Endereço: Rua da Igreja, nº 100 - Centro</p>
+        <br>
+        <p><span></></span> por Manoel Lobo</p>
     </footer>
 
     <script src="JS\main.js"></script> <!-- Scripts -->
