Correção de erros

--- a/index.html
+++ b/index.html
@@ -38,10 +38,6 @@
         <p>Sob a proteção de Nossa Senhora do Carmo, caminhamos na fé.</p>
     </section>
 
-    <div id="container-aviso" class="aviso-destaque" style="display: none;">
-        <span id="texto-aviso">Carregando avisos...</span>
-    </div>
-
     <section class="celebracoes" id="missas">
         <h2>Horários de Celebrações</h2>
         <div class="grid-horarios">
@@ -68,7 +64,7 @@
     <section class="pix-section" id="dizimo">
         <h2>Seja um <span id="doador">Doador</span></h2>
         <p>Contribua com a evangelização e manutenção de nossa paróquia.</p>
-        <a href="pix.html" class="btn-pix">Contribuir via PIX</a>
+        <a href="#" class="btn-pix">Contribuir via PIX</a>
     </section>
 
     <section class="endereco" id="endereco">
@@ -77,10 +73,10 @@
     <footer id="direitos">
         <p>&copy; 2026 Paróquia Nossa Senhora do Carmo - Todos os direitos reservados.</p>
         <p>Endereço: Rua da Igreja, nº 100 - Centro</p>
-        <br>
-        <p><span></></span> por Manoel Lobo</p>
+        <p class="dev"><span></></span>por Manoel Lobo</p>
     </footer>
 
-    <script src="JS\main.js"></script> <!-- Scripts -->
+    <script src="JS/main.js"></script> <!-- Scripts -->
+    <script src="JS/hamburger.js"></script>
 </body>
 </html>
