Remoção do login

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><a href="#missas">Celebrações</a></li>
                 <li><a href="#endereco">Endereço</a></li>
                 <li><a href="#dizimo">Doação</a></li>
-                <li><a href="login.html"><button class="login">Login</button></a></li>
+                <!-- <li><a href="login.html"><button class="login">Login</button></a></li> -->
             </ul>
         </nav>
     </header>
