--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="pix-section" id="dizimo">
         <h2>Seja um <span id="doador">Doador</span></h2>
         <p>Contribua com a evangelização e manutenção de nossa paróquia.</p>
-        <a href="#" class="btn-pix">Contribuir via PIX</a>
+        <a href="pix.html" class="btn-pix">Contribuir via PIX</a>
     </section>
 
     <section class="endereco" id="endereco">
@@ -74,7 +74,7 @@
     <footer id="direitos">
         <p>&copy; 2026 Paróquia Nossa Senhora do Carmo - Todos os direitos reservados.</p>
         <p>Endereço: Rua da Igreja, nº 100 - Centro</p>
-        <p class="dev"><span></></span>por Manoel Lobo</p>
+        <a class="dev" title="Desenvolvido por Manoel Lobo" href="https://instagram.com/manoellob_"><i class="bi bi-code-slash"></i>por Manoel Lobo</a>
     </footer>
 
     <script src="JS/main.js"></script> <!-- Scripts -->
