--- a/pix.html
+++ b/pix.html
@@ -34,6 +34,7 @@
         </nav>
     </header>
 
+    <h1><i class="bi bi-code-slash"></i>EM DESENVOLVIMENTO...</h1>
 
     <script src="JS/main.js"></script>
 </body>
