--- a/pix.html
+++ b/pix.html
@@ -26,10 +26,10 @@
 
         <nav>
             <ul class="nav-menu" id="nav-menu">
-                <li><a href="#inicio">Início</a></li>
-                <li><a href="#missas">Celebrações</a></li>
-                <li><a href="#endereco">Endereço</a></li>
-                <li><a href="#dizimo">Doação</a></li>
+                <li><a href="index.html">Início</a></li>
+                <li><a href="index.html#hero">Celebrações</a></li>
+                <li><a href="inedx.html#endereco">Endereço</a></li>
+                <li><a href="index.html#dizimo">Doação</a></li>
             </ul>
         </nav>
     </header>
