--- a/pix.html
+++ b/pix.html
@@ -24,12 +24,13 @@
             <span></span>
         </button>
 
-        <nav>
+        <nav style="display: flex;">
+            <a href="index.html" class="home" id="home" style="color: white; font-size: 20px; text-decoration: none;"><i class="bi bi-house-door-fill"></i></a>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="index.html">Início</a></li>
-                <li><a href="index.html#hero">Celebrações</a></li>
-                <li><a href="inedx.html#endereco">Endereço</a></li>
-                <li><a href="index.html#dizimo">Doação</a></li>
+                <li><a href="index.html#missas">Celebrações</a></li>
+                <li><a href="index.html#endereco">Endereço</a></li>
+                <!-- <li><a href="index.html#dizimo">Doação</a></li> -->
             </ul>
         </nav>
     </header>
