--- a/pix.html
+++ b/pix.html
@@ -25,7 +25,7 @@
         </button>
 
         <nav style="display: flex;">
-            <a href="index.html" class="home" id="home" style="color: white; font-size: 20px; text-decoration: none;"><i class="bi bi-house-door-fill"></i></a>
+            <a href="index.html" class="home" id="home" style="color: white; text-decoration: none;"><i class="bi bi-house-door-fill"></i></a>
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="index.html#missas">Celebrações</a></li>
@@ -37,6 +37,7 @@
 
     <h1><i class="bi bi-code-slash"></i>  Página em desenvolvimento...</h1>
 
+    <script src="JS/hamburger.js"></script>
     <script src="JS/main.js"></script>
 </body>
 </html>
