--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PNSC</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet"> <!-- Link das fontes -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"> <!-- Link dos ícones - Bootstrap -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Playfair+Display:wght@700&display=swap"
+        rel="stylesheet"> <!-- Link das fontes -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!-- Link dos ícones - Bootstrap -->
 
     <link rel="stylesheet" href="CSS\style.css"> <!-- Folha de estilos CSS -->
 </head>
+
 <body>
     <a href="https://wa.me/5500000000000" class="whatsapp-float" target="_blank">
         <i class="bi bi-whatsapp"></i> <!-- Ícone do WhatsApp -->
@@ -69,15 +74,21 @@
     </section>
 
     <section class="endereco" id="endereco">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.687052958556!2d-39.6781979267365!3d-4.649792543782279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7be3fa3d8ede62b%3A0xd6bae7c3d8119ec0!2sIgreja%20de%20Nossa%20Senhora%20do%20Carmo!5e0!3m2!1spt-BR!2sbr!4v1768949287045!5m2!1spt-BR!2sbr" width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.687052958556!2d-39.6781979267365!3d-4.649792543782279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7be3fa3d8ede62b%3A0xd6bae7c3d8119ec0!2sIgreja%20de%20Nossa%20Senhora%20do%20Carmo!5e0!3m2!1spt-BR!2sbr!4v1768949287045!5m2!1spt-BR!2sbr"
+            width="100%" height="250px" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
     <footer id="direitos">
-        <p>&copy; 2026 Paróquia N. Sra. do Carmo - Todos os direitos reservados.</p>
-        <p>Endereço: Av. Trajano Honorato - Lagoa do Mato, Centro</p>
-        <a class="dev" title="Desenvolvido por Manoel Lobo" href="https://instagram.com/manoellob_"><i class="bi bi-code-slash"></i>por Manoel Lobo</a>
+        <div>
+            <p>&copy; 2026 Paróquia N. Sra. do Carmo - Todos os direitos reservados.</p>
+            <p>Endereço: Av. Trajano Honorato - Lagoa do Mato, Centro</p>
+            <a class="dev" title="Desenvolvido por Manoel Lobo" href="https://instagram.com/manoellob_"><i class="bi bi-code-slash"></i>por Manoel Lobo</a>
+        </div>
     </footer>
 
     <script src="JS/main.js"></script> <!-- Scripts -->
     <script src="JS/hamburger.js"></script>
 </body>
+
 </html>
