Adição de ícone

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <footer id="direitos">
         <div>
             <p>&copy; 2026 Paróquia N. Sra. do Carmo - Todos os direitos reservados.</p>
-            <p>Endereço: Av. Trajano Honorato - Lagoa do Mato, Centro</p>
+            <p><i class="bi bi-geo-alt-fill"></i> Av. Trajano Honorato - Lagoa do Mato, Centro</p>
             <a class="dev" title="Desenvolvido por Manoel Lobo" href="https://instagram.com/manoellob_"><i class="bi bi-code-slash"></i>por Manoel Lobo</a>
         </div>
     </footer>
