--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                 <h3>Terça-feira</h3>
                 <p>18h00 - Terço dos homens</p>
             </div>
+             <div class="card-horario">
+                <h3>Quarta-feira</h3>
+                <p>18h00 - Terço das crianças</p>
+            </div>
             <div class="card-horario">
                 <h3>Quinta-feira</h3>
                 <p>18h00 - Adoração | 19h00 - Santa Missa</p>
