--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#missas">Celebrações</a></li>
                 <li><a href="#endereco">Endereço</a></li>
+                <li><a href="corais.html">Escala de Corais</a></li>
                 <li><a href="#dizimo">Doação</a></li>
                 <!-- <li><a href="login.html"><button class="login">Login</button></a></li> -->
             </ul>
