--- a/corais.html
+++ b/corais.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="CSS\style.css"> <!-- Folha de estilos CSS -->
     <style>
         :root {
-            --marrom: #211800;
+            --marrom: #4e0e70;
             --dourado: #e1ad2a;
             --branco: #ffffff;
             --cinza-claro: #f4f4f4;
